# sedaro-twin

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
sedaro-gui/: Dockerfile  README.md
sedaro-gui/app/: sim.py
sedaro-gui/app/public/: data.json  data.jsonl
sedaro-gui/app/src/: App.js
src/: cli.rs  lib.rs  logger.rs  main.rs  message_queue.rs  sedaro_twin.rs
