[package]
name = "sedaro"
version = "0.42.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] } # MIT
rand = "0.8.5"
reqwest = {version = "0.11.13", features = ["stream", "multipart", "json", "blocking"] }	# MIT
clap = { version = "4.4.6", features = ["derive", "env"] } # apachi-mit
url = "2.4.1"
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
thiserror = "1.0.50"
amiquip = "0.4.2"
lazy_static = "1.4.0"
regex = "1.10.2"
anstyle = "1.0.6"
tokio-util = { version = "0.7.3", features = ["full"] }
nom = "7.1.3"

[lib]
name = "sedaro"
path = "src/lib.rs"
doctest = false


[[bin]]
name = "sedaro-dt" # Sedaro Digital Twin
path = "src/main.rs"
